--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "TU_API_KEY",
-      authDomain: "TU_DOMINIO.firebaseapp.com",
-      databaseURL: "https://TU_DOMINIO.firebaseio.com",
-      projectId: "TU_PROJECT_ID",
-      storageBucket: "TU_DOMINIO.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
+      apiKey: "AIzaSyDBbMURTlezPQOtEmfOYBXaJAe_nmGCBhQ",
+      authDomain: "pampatestjulian.firebaseapp.com",
+      databaseURL: "https://pampatestjulian-default-rtdb.firebaseio.com/",
+      projectId: "pampatestjulian",
+      storageBucket: "pampatestjulian.firebasestorage.app",
+      messagingSenderId: "743031038228",
+      appId: "1:743031038228:web:4fa51776564f4f45622201"
     };
+    
     firebase.initializeApp(firebaseConfig);
 
     new Vue({
