--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input v-model="form.direccion" class="form-control mb-2" placeholder="Direccion">
         <input v-model="form.referencia" class="form-control mb-2" placeholder="Referencia">
         <input v-model="form.fecha_estimada" type="date" class="form-control mb-2">
-        <select v-model="estado_envio" class="form-control mb-3">
+        <select v-model="form.estado_envio" class="form-control mb-3">
           <option disabled value="">Envio</option>
           <option>Pendiente</option>
           <option>Completado</option>
