--- a/index.html
+++ b/index.html
@@ -1,48 +1,129 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Formulario Vientos Pampa</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+    body {
+      background-color: #181a1b;
+      color: #e8e6e3;
+    }
+    .container {
+      background-color: #282c34;
+      border-color: #4d4d4d;
+    }
+    h2, h4, h5 {
+      color: #e8e6e3;
+    }
+    p, label {
+      color: #dcdcdc;
+    }
+    .form-control {
+      background-color: #3e4048;
+      color: #e8e6e3;
+      border-color: #5c5c5c;
+    }
+    .btn-primary {
+      background-color: #3898d8;
+      border-color: #3898d8;
+      color: #fff;
+    }
+    .btn-outline-danger {
+      color: #e53935;
+      border-color: #e53935;
+    }
+    .input-group-text {
+      background-color: #3e4048;
+      color: #e8e6e3;
+      border-color: #5c5c5c;
+    }
+    .form-select {
+      background-color: #3e4048;
+      color: #e8e6e3;
+      border-color: #5c5c5c;
+    }
+    .btn-success {
+      background-color: #4caf50;
+      border-color: #4caf50;
+      color: #fff;
+    }
+    .btn-primary:hover, .btn-primary:focus {
+      background-color: #2c7ab8;
+      border-color: #2c7ab8;
+    }
+    .btn-success:hover, .btn-success:focus {
+      background-color: #43a047;
+      border-color: #43a047;
+    }
+    .btn-outline-danger:hover, .btn-outline-danger:focus {
+      background-color: #e53935;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
   <div id="app" class="container py-4">
     <div v-if="!user" class="text-center">
-      <h2 class="mb-4">Iniciar sesión en Vientos Pampa</h2>
-      <button class="btn btn-primary" @click="login">Login con Google</button>
+      <h2 class="mb-4">Bienvenido a Vientos Pampa</h2>
+      <p class="lead">Por favor, inicia sesión para continuar.</p>
+      <button class="btn btn-primary btn-lg" @click="login">
+        <i class="bi bi-google me-2"></i> Iniciar sesión con Google
+      </button>
     </div>
 
     <div v-else>
-      <h4 class="mb-3">Hola, {{ user.displayName }}, Completa el formulario</h4>
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h4>¡Hola, {{ user.displayName }}!</h4>
+        <button class="btn btn-sm btn-outline-danger" @click="logout">
+          <i class="bi bi-box-arrow-right me-1"></i> Cerrar sesión
+        </button>
+      </div>
+      <h5 class="mb-3">Ingrese los detalles de la operación:</h5>
       <form @submit.prevent="enviar">
         <div class="mb-3">
-        <label class="form-label">Fecha informe:</label>
-        <input v-model="form.fecha_informe" type="date" class="form-control">
+          <label for="cliente" class="form-label">Cliente</label>
+          <input v-model="form.cliente" type="text" class="form-control" id="cliente" required />
         </div>
-        <input v-model="form.solicitante" class="form-control mb-2" placeholder="Solicitante">
-        <input v-model="form.producto" class="form-control mb-2" placeholder="Producto">
-        <input v-model="form.cantidades" type="number" class="form-control mb-2" placeholder="Cantidades">
-        <input v-model="form.destino" class="form-control mb-2" placeholder="Destino">
-        <input v-model="form.palets" type="number" class="form-control mb-2" placeholder="Palets">
-        <input v-model="form.direccion" class="form-control mb-2" placeholder="Direccion">
-        <input v-model="form.referencia" class="form-control mb-2" placeholder="Referencia">
         <div class="mb-3">
-        <label class="form-label">Fecha estimada:</label>
-        <input v-model="form.fecha_estimada" type="date" class="form-control">
+          <label for="producto" class="form-label">Producto/Servicio</label>
+          <input v-model="form.producto" type="text" class="form-control" id="producto" required />
         </div>
-        <select v-model="form.estado_envio" class="form-control mb-3">
-          <option disabled value="">Envio</option>
-          <option>Pendiente</option>
-          <option>Completado</option>
-        </select>
-        <button type="submit" class="btn btn-success">Enviar</button>
+        <div class="mb-3">
+          <label for="monto" class="form-label">Monto</label>
+          <div class="input-group">
+            <span class="input-group-text">$</span>
+            <input v-model="form.monto" type="number" class="form-control" id="monto" required />
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="fecha_factura" class="form-label">Fecha de Factura</label>
+          <input v-model="form.fecha_factura" type="date" class="form-control" id="fecha_factura" required />
+        </div>
+        <div class="mb-3">
+          <label for="fecha_cobro" class="form-label">Fecha de Cobro (Estimada)</label>
+          <input v-model="form.fecha_cobro" type="date" class="form-control" id="fecha_cobro" />
+          <small class="form-text text-muted">Opcional.</small>
+        </div>
+        <div class="mb-3">
+          <label for="estado" class="form-label">Estado</label>
+          <select v-model="form.estado" class="form-select" id="estado" required>
+            <option disabled value="">Seleccionar estado</option>
+            <option>Devengado</option>
+            <option>Percibido</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-success">
+          <i class="bi bi-send me-2"></i> Enviar Operación
+        </button>
       </form>
-      <button class="btn btn-sm btn-danger mt-3" @click="logout">Cerrar sesión</button>
     </div>
   </div>
 
@@ -52,11 +133,10 @@
       authDomain: "pampatestjulian.firebaseapp.com",
       databaseURL: "https://pampatestjulian-default-rtdb.firebaseio.com/",
       projectId: "pampatestjulian",
-      storageBucket: "pampatestjulian.firebasestorage.app",
+      storageBucket: "pampatestjulian.appspot.com",
       messagingSenderId: "743031038228",
       appId: "1:743031038228:web:4fa51776564f4f45622201"
     };
-    
     firebase.initializeApp(firebaseConfig);
 
     new Vue({
@@ -64,51 +144,92 @@
       data: {
         user: null,
         form: {
-          solicitante: '',
+          cliente: '',
           producto: '',
-          cantidades: '',
-          destino: '',
-          palets: '',
-          direccion: '',
-          referencia: '',
-          fecha_informe: new Date().toISOString().substr(0, 10),
-          fecha_estimada: new Date().toISOString().substr(0, 10),
-          estado_envio: ''
+          monto: '',
+          fecha_factura: '',
+          fecha_cobro: '',
+          estado: ''
         }
       },
       created() {
         firebase.auth().onAuthStateChanged(user => {
-          this.user = user;
+          if (user) {
+            console.log("Usuario detectado:", user);
+            this.user = user;
+          } else {
+            console.log("No hay usuario activo.");
+          }
         });
       },
       methods: {
         login() {
-          const provider = new firebase.auth.GoogleAuthProvider();
-          firebase.auth().signInWithPopup(provider);
+        const provider = new firebase.auth.GoogleAuthProvider();
+        provider.setCustomParameters({
+            prompt: 'select_account' // fuerza selector de cuentas siempre
+        });
+
+        firebase.auth().signInWithPopup(provider)
+            .then((result) => {
+            console.log("Popup login exitoso:", result.user);
+            this.user = result.user;
+            })
+            .catch((error) => {
+            console.error("Error en login con popup:", error);
+            Swal.fire({
+                title: '¡Error de Autenticación!',
+                text: error.message,
+                icon: 'error',
+                confirmButtonText: 'OK'
+            });
+            });
         },
         logout() {
-          firebase.auth().signOut();
+        firebase.auth().signOut().then(() => {
+            console.log("Sesión cerrada");
+            this.user = null;
+        }).catch((error) => {
+            console.error("Error al cerrar sesión:", error);
+            Swal.fire({
+            title: '¡Error!',
+            text: 'No se pudo cerrar la sesión.',
+            icon: 'error',
+            confirmButtonText: 'OK'
+            });
+        });
         },
         enviar() {
+          if (!this.user) {
+            Swal.fire({
+              title: '¡Advertencia!',
+              text: 'Debes iniciar sesión para enviar datos.',
+              icon: 'warning',
+              confirmButtonText: 'OK'
+            });
+            return;
+          }
           const ref = firebase.database().ref("operaciones");
           ref.push({
             ...this.form,
             email: this.user.email,
             timestamp: new Date().toISOString()
+          }).then(() => {
+            this.form = { cliente: '', producto: '', monto: '', fecha_factura: '', fecha_cobro: '', estado: '' };
+            Swal.fire({
+              title: '¡Éxito!',
+              text: 'La operación se ha enviado correctamente.',
+              icon: 'success',
+              confirmButtonText: 'OK'
+            });
+          }).catch(error => {
+            console.error("Error al enviar la operación:", error);
+            Swal.fire({
+              title: '¡Error!',
+              text: 'Hubo un problema al enviar la operación.',
+              icon: 'error',
+              confirmButtonText: 'OK'
+            });
           });
-          this.form = {
-            solicitante: '',
-            producto: '',
-            cantidades: '',
-            destino: '',
-            palets: '',
-            direccion: '',
-            referencia: '',
-            fecha_informe: new Date().toISOString().substr(0, 10),
-            fecha_estimada: '',
-            estado_envio: ''
-          };
-          alert("Enviado correctamente");
         }
       }
     });
